--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "socket.io-client": "^4.2.0",
+    "string-similarity": "^4.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
